feat: javafx, create demo, MVVM